- Fixed collapse funciton - Added more settings components

--- a/src/components/Settings/SeriesPrioritySelector/SeriesPrioritySelector.module.css
+++ b/src/components/Settings/SeriesPrioritySelector/SeriesPrioritySelector.module.css
@@ -44,16 +44,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 1rem;
-    /* background-color: rgb(243, 243, 243); */
-    /* border : 1px solid black; */
     width: 100%;
     max-width: 320px;
 }
 
 .priority-list-container .list {
-    background-color: rgb(239, 239, 239);
-    width: calc(100% - 2rem);
+    background-color: rgb(243, 243, 243);
+    width: 100%;
+    min-height: 10rem;
+    height: fit-content;
 }
 
 .priority-list-container ol li div{
@@ -62,11 +61,52 @@
     justify-content: space-between;
     padding: .5rem;
     width: 100%;
-    border-bottom: 1px solid rgb(204, 204, 204);
     background-color: white;
-    width: 100%;
 }
+
+.priority-list-container li {
+    padding-left: .5rem;
+    padding-right: .5rem;
+    display: flex;
+    counter-increment: item;
+    flex-direction: row;
+    justify-content: center;
+    background-color: white;
+    border-bottom: 1px solid rgb(204, 204, 204);
+    box-shadow: 0 5px 5px rgb(204, 204, 204, 0.2);
+}
+
+.priority-list-container li:first-child {
+    border-top: 1px solid rgb(204, 204, 204);
+}
+
+.priority-list-container li:before {
+    content: counters(item, ".") ". ";
+    margin-right: 0.5rem;
+    padding-top: .5rem;
+}
+
+/* select all li elements without .dragging AND without any content */
+.priority-list-container li:not(.dragging):empty {
+    opacity: 0;
+}
+  
+
 
 #priority-selector {
     background-color: white;
+}
+
+
+.trash-icon {
+    opacity: .5;
+    cursor: pointer;
+}
+
+.trash-icon:hover {
+    opacity: 1;
+}
+
+.title {
+    margin-bottom: 20px;
 }
